<resources>
    <string name="app_name">WhatsAppAndroid</string>
    <string name="myServerPort">5146</string>
    <string name="username_input">Username</string>
    <string name="password_input">Password</string>
    <string name="repeat_password_input">Repeat password</string>
    <string name="login_button">Login</string>
    <string name="nickname_input">Nickname</string>
    <string name="add_input">Add</string>
    <string name="server_input">Server</string>
    <string name="register_button">Register</string>
    <string name="go_to_login">Already registered? Login now</string>
    <string name="go_to_register">Not registered yet? Register now</string>
    <string name="select_photo">Select Photo</string>
    <string name="textview">TextView</string>
    <string name="settings">Settings</string>
    <string name="general_settings">General Settings</string>
    <string name="mode">Mode</string>
    <string name="dark_summery">Enable for dark mode, or light mode else</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="basicServerUrl">http://10.0.2.2:</string>
    <string name="http_request">http://</string>
    <string name="BasicUrl">BasicUrl</string>
    <string name="summary_url">Default basic server url</string>
    <string name="title_url">Server Url</string>
    <string name="BasicPort">BasicPort</string>
    <string name="summary_port">Default server port</string>
    <string name="title_port">Server Port</string>
    <string name="my_server_name">localhost:5146</string>
    <string name="android_local">10.0.2.2</string>
</resources>