<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/general_settings" >
        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/mode"
            android:summary="@string/dark_summery"
            android:title="@string/dark_mode" />

        <EditTextPreference
            android:defaultValue="@string/basicServerUrl"
            android:key="@string/BasicUrl"
            android:summary="@string/summary_url"
            android:title="@string/title_url" />

        <EditTextPreference
            android:defaultValue="@string/myServerPort"
            android:key="@string/BasicPort"
            android:summary="@string/summary_port"
            android:title="@string/title_port" />

    </PreferenceCategory>

</PreferenceScreen>